# fuse

./: CMakeLists.txt  aabb.cpp  application.cpp  assimp_loader.cpp  base_windowing.cpp  bitmap_font.cpp  camera.cpp  color.cpp  compile_shader.cpp  descriptor_heap.cpp  fps_camera_controller.cpp  frustum.cpp  gpu_command_queue.cpp  gpu_graphics_command_list.cpp  gpu_mesh.cpp  gpu_render_context.cpp  gpu_ring_buffer.cpp  gpu_upload_manager.cpp  image.cpp  input.cpp  keyboard.cpp  logger.cpp  material.cpp  mesh.cpp  mipmap_generator.cpp  mouse.cpp  patch.diff  pipeline_state.cpp  plane.cpp  pool_manager.cpp  ray.cpp  render_resource.cpp  render_resource_manager.cpp  resource.cpp  resource_factory.cpp  resource_manager.cpp  rocket_input.cpp  rocket_interface.cpp  scene_graph.cpp  sphere.cpp  (+4 more)
cmake/Modules/: FindDirectX11.cmake  FindDirectX12.cmake
core/: CMakeLists.txt  logger.cpp  pool_manager.cpp
core/include/fuse/: core.hpp
core/include/fuse/core/: debug_ostream.hpp  lockable.hpp  logger.hpp  morton.hpp  pool_manager.hpp  properties_macros.hpp  singleton.hpp  string.hpp  types.hpp
graphics/: CMakeLists.txt  base_windowing.cpp  camera.cpp  descriptor_heap.cpp  fps_camera_controller.cpp  gpu_command_queue.cpp  gpu_graphics_command_list.cpp  gpu_mesh.cpp  gpu_render_context.cpp  gpu_upload_manager.cpp  material.cpp  mesh.cpp  render_resource.cpp  resource.cpp  resource_factory.cpp  scene_graph.cpp  text_renderer.cpp  texture.cpp  transform.cpp  wx_windowing.cpp
graphics/include/fuse/: application.hpp  application.inl  assimp_loader.hpp  base_windowing.hpp  camera.hpp  color.hpp  compile_shader.hpp  descriptor_heap.hpp  directx_helper.hpp  fps_camera_controller.hpp  gpu_global_resource_state.hpp  gpu_graphics_command_list.hpp  gpu_render_context.hpp  gpu_ring_buffer.hpp  image.hpp  input.hpp  keyboard.hpp  render_resource.hpp  render_resource_manager.hpp  resource_factory.hpp  resource_types.hpp  rocket_input.hpp  scene_graph.hpp  texture.hpp  texture_manager.hpp  transform.hpp  transform_hierarchy.hpp  wx_helpers.hpp  wx_windowing.hpp
include/fuse/: allocators.hpp  application.hpp  application.inl  assimp_loader.hpp  base_windowing.hpp  bitmap_font.hpp  bitmap_font_manager.hpp  camera.hpp  color.hpp  compile_shader.hpp  debug_ostream.hpp  descriptor_heap.hpp  directx_helper.hpp  fps_camera_controller.hpp  geometry.hpp  gpu_command_queue.hpp  gpu_global_resource_state.hpp  gpu_graphics_command_list.hpp  gpu_mesh.hpp  gpu_mesh_manager.hpp  gpu_render_context.hpp  gpu_ring_buffer.hpp  gpu_upload_manager.hpp  image.hpp  image_manager.hpp  keyboard.hpp  lockable.hpp  logger.hpp  material.hpp  material_manager.hpp  math.hpp  mesh.hpp  mesh_manager.hpp  mipmap_generator.hpp  morton.hpp  mouse.hpp  pipeline_state.hpp  priority_observers.hpp  properties_macros.hpp  render_resource.hpp  (+17 more)
include/fuse/geometry/: aabb.hpp  bounding_volumes.hpp  cramer.hpp  frustum.hpp  intersection.inl  loose_octree.hpp  loose_octree.inl  plane.hpp  ray.hpp  sphere.hpp  transform_affine.hpp  transform_iterator.hpp
include/fuse/math/: cwise_operator.hpp  mat128.hpp  mat128_impl.inl  math.hpp  matrix.hpp  matrix3x3.hpp  matrix_base_impl.hpp  matrix_iterators.hpp  matrix_operators.hpp  matrix_traits.hpp  newton_raphson.hpp  quat128_impl.inl  quaternion.hpp  quaternion_impl.inl  to_string.hpp  vec128.hpp  vec128_impl.inl  vector3.hpp  vector3.inl  vector_base_impl.hpp
math/: CMakeLists.txt  instancing.cpp
math/geometry/: aabb.cpp  affine_transforms.cpp  frustum.cpp  plane.cpp  ray.cpp  sphere.cpp  view_projection.cpp
math/include/fuse/: math.hpp
math/include/fuse/geometry/: aabb.hpp  affine_transforms.hpp  bounding_volumes.hpp  cramer.hpp  frustum.hpp  intersection.hpp  intersection.inl  leading_zeros.hpp  loose_octree.hpp  loose_octree.inl  morton.hpp  plane.hpp  ray.hpp  sphere.hpp  transform_affine.hpp  view_projection.hpp
math/include/fuse/math/: constants.hpp  convertions.hpp  mat128.hpp  mat128_impl.inl  math.hpp  math_fwd.hpp  math_type_traits.hpp  matrix.hpp  matrix2x2.hpp  matrix3x3_impl.inl  matrix4x4.hpp  matrix4x4_impl.inl  matrix_base_impl.inl  matrix_functions.hpp  matrix_iterators.hpp  matrix_operators.hpp  matrix_traits.hpp  newton_raphson.hpp  quat128_impl.inl  quaternion.hpp  quaternion_impl.inl  scalar_functions.hpp  scalar_matrix_operators.hpp  to_string.hpp  trigonometry.hpp  utility.hpp  vec128.hpp  vec128_impl.inl  vector2.hpp  vector3.hpp  vector3_impl.inl  vector4.hpp  vector_base_impl.inl  vector_functions.hpp
math/math/: instancing.cpp  to_string.cpp
math_test/: CMakeLists.txt  math_test.cpp  math_test_code_gen.py
renderer/: CMakeLists.txt  alpha_composer.cpp  alpha_composer.hpp  blur.cpp  blur.hpp  cbuffer_structs.hpp  debug_renderer.cpp  debug_renderer.hpp  deferred_renderer.cpp  deferred_renderer.hpp  editor_gui.cpp  editor_gui.hpp  light.hpp  realtime_renderer.cpp  realtime_renderer.hpp  render_variables.cpp  render_variables.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer_application.cpp  renderer_application.hpp  scene.cpp  scene.hpp  sdsm.cpp  sdsm.hpp  shadow_mapper.cpp  shadow_mapper.hpp  shadow_mapping.cpp  shadow_mapping.hpp  skybox.cpp  skybox.hpp  skydome.cpp  skydome.hpp  tonemapper.cpp  tonemapper.hpp  visual_debugger.cpp  visual_debugger.hpp  wx_editor_gui.cpp  wx_editor_gui.hpp
renderer/shaders/: blur.hlsl  box_blur.hlsl  color.hlsli  composer.hlsl  constants.hlsli  debug.hlsl  deferred_shading_final.hlsl  deferred_shading_gbuffer.hlsl  esm.hlsli  evsm2.hlsli  evsm4.hlsli  gbuffer.hlsli  mipmap_generator.hlsl  quad_input.hlsli  quad_vs.hlsl  rocket.hlsl  scene_data.hlsli  sdsm.hlsl  shadow_mapping.hlsl  skybox.hlsl  skybox.hlsli  skydome.hlsl  skydome.hlsli  test.hlsl  text_rendering.hlsl  tonemapping.hlsl  vsm.hlsli
sample/: CMakeLists.txt  sample.cpp
sample/shaders/: sample.hlsl
